--- a/EventCenter.css
+++ b/EventCenter.css
@@ -87,6 +87,18 @@ h3 {
     align-items: center;
 }
 
+/* Menu Page */
+
+h4 {
+    font-size: 50px;
+    display: flex;
+    justify-content: center;
+}
+
+#menu h4 table {
+    display: flex;
+}
+
 
 
    
