--- a/EventCenter.css
+++ b/EventCenter.css
@@ -1,7 +1,7 @@
 body {
     width: 100%;
     margin: 0;
-    background-color: ivory;
+    background-color: darkcyan;
 }
 
 @media (max-width: 768px) {
@@ -49,6 +49,7 @@ nav a:hover {
 }
 
 /* Home Page*/
+
 h2 {
     font-size: 50px;
 }
@@ -63,10 +64,15 @@ h2 {
 }
 
 /* Events Page */
+
 h3 { 
     display: flex;
     justify-content: center;
     font-size: 50px;
+    color: salmon;
+    border: none ;
+    background-color: black;
+    margin: 50px;
 }
 
 #events li {
@@ -87,17 +93,29 @@ h3 {
     align-items: center;
 }
 
+#events ul p {
+    text-align: center;
+    margin: 50px;
+}
+
 /* Menu Page */
 
 h4 {
     font-size: 50px;
-    display: flex;
-    justify-content: center;
+    text-align: center;
+    color: salmon;
+    border: none;
+    background-color: black;
+    margin: 50px;
 }
 
-#menu h4 table {
+.menutable {
     display: flex;
+    justify-content: center;
+    text-align: center;
+    font-size: 30px;
 }
+
 
 
 
