--- a/EventCenter.css
+++ b/EventCenter.css
@@ -80,6 +80,7 @@ h3 {
     justify-content: center;
     font-size: 30px;
     margin: 10px;
+    text-decoration: underline;
 }
 
 .eventimg {
@@ -116,6 +117,32 @@ h4 {
     font-size: 30px;
 }
 
+#menu th {
+    text-decoration: underline;
+    font-size: 35px;
+}
+
+/* Location Page */
+
+h5 {
+    font-size: 50px;
+    text-align: center;
+    color: salmon;
+    border: none;
+    background-color: black;
+    margin: 50px;
+}
+
+#location p {
+    text-align: center;
+    font-size: 30px;
+}
+
+iframe {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
 
 
 
