--- a/EventCenter.css
+++ b/EventCenter.css
@@ -63,6 +63,12 @@ h2 {
     padding: 10px;
 }
 
+#home p {
+    font-size: 30px;
+    text-align: center;
+    margin: 20px;
+}
+
 /* Events Page */
 
 h3 { 
